--- a/app/assets/stylesheets/rails_admin/custom/variables.scss
+++ b/app/assets/stylesheets/rails_admin/custom/variables.scss
@@ -18,3 +18,5 @@ $btn-primary-border: $check-blue;
 $btn-info-bg: $check-blue;
 $btn-info-border: $check-blue;
 $fg-nav-tabs-active: $check-blue;
+$box-shadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+$box-shadow-2: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
