--- a/app/assets/stylesheets/rails_admin/custom/variables.scss
+++ b/app/assets/stylesheets/rails_admin/custom/variables.scss
@@ -1,12 +1,4 @@
-$check-blue: #2e77fc;
-$highlight-blue: #f1f6ff;
-$black-87: rgba(0, 0, 0, 0.87);
-$black-75: rgba(0, 0, 0, 0.75);
-$black-05: rgba(0, 0, 0, .05);
-$black-02: rgba(0, 0, 0, .02);
-$black-16: rgba(0, 0, 0, .16);
-$black-32: rgba(0, 0, 0, .32);
-$black-54: rgba(0, 0, 0, .54);
+@import '../../../sass/shared.scss';
 
 // Material bootstrap theme
 $brand-primary: $check-blue;
@@ -18,5 +10,3 @@ $btn-primary-border: $check-blue;
 $btn-info-bg: $check-blue;
 $btn-info-border: $check-blue;
 $fg-nav-tabs-active: $check-blue;
-$box-shadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-$box-shadow-2: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
