Refine alignment of custom status inputs #6340

--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -360,6 +360,7 @@ h4 {
   // (Though they are missing a class)
   input[type="text"] {
     @extend .form-control;
+    padding-left: 0 !important;
 
     &:focus {
       border-bottom: 2px solid $check-blue;
