Revert "Feature/6340 admin theme"

--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -1,462 +1,17 @@
-// =======================================================
-// Bootstrap Material UI Rails Admin theme customizations
-// We don't touch any of the bootstrap or other CSS upstream
-// Only add overrides here, with a lot of !important :|
-
-// ============================================
-// Shadows
-* {
-  box-shadow: none !important;
-}
-
-// ============================================
-// Buttons
-.btn {
-  color: $black-54 !important;
-  border-radius: 0px !important;
-  border-width: 0px !important;
-  background-color: $black-05 !important;
-
-  i {
-    color: $black-54 !important;
-    margin-right: 4px !important;
-  }
-
-  &-primary {
-    background-color: $check-blue !important;
-    color: white !important;
-
-    i {
-      color: white !important;
-    }
-  }
-}
-
-// The buttons that appear when you click "Add filter"
-#filters_box {
-  & > .form-search .form-label {
-    padding-left: 16px !important;
-    padding-right: 16px !important;
-    height: 29px !important;
-  }
-}
-
-// ============================================
-// Main top navbar
-.navbar.navbar-default {
-  background-color: white !important;
-  font-size: 16px !important;
-
-  .navbar-right {
-    margin-right: 16px !important;
-  }
-
-  a {
-    color: $black-87 !important;
-
-    // The logo
-    &.navbar-brand {
-      font-weight: 900 !important;
-      color: $check-blue !important;
-
-      small {
-        font-weight: 400;
-        color: $black-54 !important;
-      }
-    }
-  }
-
-  // For some reason nothing appears in this link
-  .edit_user_root_link a {
-    padding: 0 !important;
-  }
-
-  // Unset some styles on the log out button
-  .label-danger {
-    background-color: transparent !important;
-    color: $black-87 !important;
-    padding: 0 !important;
-    font-size: 100% !important;
-    font-weight: normal !important;
-  }
-}
-
-// ============================================
-// Sidebar
-//
-.sidebar-nav {
-  background-color: white !important;
-  border-right: 1px solid $black-05 !important;
-
-  & .nav-pills li {
-    & > a {
-      color: $black-54 !important;
-    }
-
-    &.active > a,
-    &.active > a:hover,
-    &.active > a:focus {
-      background-color: $highlight-blue !important;
-      color: $black-87 !important;
-      font-weight: 900;
-    }
-  }
-
-  & .nav-pills li.dropdown-header {
-    border-bottom: none !important;
-    font-size: 12px !important;
-    color: $black-54 !important;
-    font-weight: 400 !important;
-  }
-}
-
-ul.nav.nav-pills:last-of-type li.dropdown-header {
-  border-top: 1px solid $black-05 !important;
-  margin-top: 16px !important;
-}
-
-// Dropdown
-li.dropdown > a.dropdown-toggle:focus {
-  color: $black-54 !important;
-}
-
-// TODO: consider showing these subnavs, they are non-essential
-.nav-level-1 {
-  display: none !important;
-}
-
-.filtering-select .btn.btn-info.dropdown-toggle {
-  background-color: transparent !important;
-}
-// ============================================
-// Tabs
-.nav-tabs {
-  background-color: transparent !important;
-  border-bottom-color: $black-05 !important;
-
-  li a {
-    color: $black-87 !important;
-
-    &:hover {
-      color: $black-54 !important;
-    }
-
-    i[class*="icon"] {
-      color: $black-75 !important;
-      margin-right: 4px !important;
-    }
-  }
-
-  li.active {
-    border-bottom-color: $check-blue !important;
-    border-bottom-width: 2px !important;
-    background-color: transparent !important;
-
-    a {
-      color: $check-blue !important;
-
-      i[class*="icon"] {
-        color: $check-blue !important;
-      }
-    }
-  }
-}
-
-// ============================================
-// Hide unnecessary elements
-ol.breadcrumb,
-.page-header,
-#remove_filter,
-.well [href*="export"],
-#btn-menu-wrapper a[href="#"] {
-  display: none !important;
-}
-
-// ============================================
-// Tables
-//
-
-#list {
-  margin-right: 64px !important;
-}
-
-// Fix alignment error
-.table {
-  text-align: right !important;
-
-  & > tbody > tr {
-    & td {
-      vertical-align: middle !important;
-      padding: 8px 0 !important;
-      font-size: 13px !important;
-
-      &:first-of-type {
-        padding-left: 8px !important;
-      }
-
-      a {
-        color: $black-54 !important;
-      }
-
-      &.other.right {
-        padding-left: 32px !important;
-        padding-right: 32px !important;
-      }
-    }
-
-    &:hover td {
-      background-color: $highlight-blue !important;
-      cursor: default !important;
-
-      a {
-        color: $check-blue !important;
-      }
-    }
-  }
-}
-
-// Disable striping
-.table-striped > tbody > tr:nth-child(odd) > td {
-  background-color: white;
-}
-
-// Lighter borders
-.table > thead > tr > th,
-.table > thead > tr > td,
-.table > tbody > tr > th,
-.table > tbody > tr > td,
-.table > tfoot > tr > th,
-.table > tfoot > tr > td {
-  border-bottom: 1px solid $black-05 !important;
-  padding-right: 8px !important;
-  padding-left: 16px !important;
-}
-
-// Header
-.table > thead {
-  tr {
-    border-bottom: 1px solid $black-16 !important;
-
-    th {
-      text-align: right !important;
-      height: 48px !important;
-      vertical-align: middle !important;
-      font-size: 12px !important;
-      font-weight: 400 !important;
-      color: $black-54 !important;
-
-      &.header:after {
-        margin-left: 8px !important;
-        margin-right: -16px !important;
-      }
-
-      &:first-of-type {
-        padding-left: 8px !important;
-      }
-
-      &[class*="headerSort"] {
-        color: $black-87 !important;
-        font-weight: 900 !important;
-        background-color: transparent !important;
-      }
-
-      &.other.right {
-        padding-left: 32px !important;
-        padding-right: 32px !important;
-      }
-    }
-  }
-}
-
-// Total count under a table
-.total-count {
-  color: $black-54 !important;
-}
-// ============================================
-// Forms
-.form-group .form-control-static,
-.help-block,
-.help-inline,
- {
-  margin-left: 0 !important;
-  color: $black-54 !important;
-  padding-top: 8px !important;
-}
-
-.input-group-btn .btn.btn-info {
-  background-color: $black-16 !important;
-  padding: 8px 16px !important;
-
-  .caret {
-    color: $black-54 !important;
-  }
-}
-
-.form-group {
-  margin-top: 16px !important;
-}
-
-.input[type="text"] {
-  background-color: $black-02;
-  padding-left: 0 !important;
-}
-
-// Some inputs don't have the right classes or type attribute
-input:not(textarea) {
-  padding-left: 0 !important;
-}
-
-// ============================================
-// Misc
-#team_logo {
-  margin-top: 12px !important;
-  display: flex;
-}
-
-// ============================================
-// Wells
-// See http://localhost:3000/admin/team_user/1
-.well {
-  padding-left: 0 !important;
-
-  .input-group {
-    display: flex !important;
-  }
-
-  .form-group {
-    margin-top: 0 !important;
-  }
-
-  // The "Refresh" button
-  .input-group-btn button.btn-primary {
-    background-color: white !important;
-    color: $black-32 !important;
-    margin-bottom: 0 !important;
-
-    &:hover {
-      background-color: $black-05 !important;
-    }
-
-    i {
-      color: $black-32 !important;
-    }
-  }
-}
-
-// ============================================
-// Typography
-h4 {
-  margin: 32px 0 !important;
-}
-
-// ============================================
-// Custom statuses
-// See: http://localhost:3000/admin/team/1/edit
-// (Enable custom statuses first)
-
-
-
-#media_verification_statuses_editor_holder,
-#source_verification_statuses_editor_holder,
-#checklist_editor_holder {
-  .control-group:focus {
-  }
-
-  // Ensure they use the material theme
-  // (Though they are missing a class)
-  input[type="text"] {
-    @extend .form-control;
-
-    &:focus {
-      border-bottom: 2px solid $check-blue;
-      background-image: none !important;
-    }
-  }
-
-  // Hide the main titles
-  h3 {
-    display: none;
-  }
-
-  .well {
-    padding-top: 0 !important;
-  }
-
-  .container-fluid {
-    padding-left: 0 !important;
-  }
-
-  .control-group .control-label {
-    color: $black-87 !important;
-  }
-
-  .media_verification_statuses_editor_holder .container-fluid {
-    margin-left: 0 !important;
-  }
-
-  [data-schemapath="root.statuses"] > .well > div > [data-schemapath^="root.statuses."] {
-    box-shadow: $box-shadow-1 !important;
-    margin: 16px 0 !important;
-    padding: 32px 16px !important;
-    border-radius: 2px;
-
-    .well {
-      margin: 0 !important;
-    }
-
-    .row-fluid .control-group {
-      display: flex !important;
-      align-items: flex-start;
-      justify-content: flex-start;
-
-      .control-label {
-        width: 100px;
-        margin-right: 16px;
-        padding-top: 0;
-      }
-    }
-
-
-    // The color input
-    [data-schemapath*="style.color"] input {
-      width: 50px !important;
-      height: 25px !important;
-    }
-  }
-
-  .btn-group button {
-    margin-right: 8px !important;
-
-    &.json-editor-btn-add {
-      background-color: $check-blue !important;
-      color: white !important;
-    }
-  }
-}
-
-#team_limits {
-  height: 280px !important;
-}
-
 .settings-example {
-  padding: 16px 0px 0px;
+  padding: 0px;
   color: #737373;
-
   i {
     cursor: pointer;
   }
-
   pre {
     line-height: 1em;
-    max-height: 200px;
-    background-color: $black-75;
-    color: white;
+    max-height: 100px;
+    border: 1px solid #CCC;
+    background-color: #EEE;
     margin-top: 5px;
     padding: 5px;
     resize: both;
-    font-family: 'Roboto Mono', monospace !important;
-    line-height: 1.5;
-
     &.open {
       height: unset;
       max-height: none;
@@ -464,39 +19,8 @@ h4 {
   }
 }
 
-.dashboard {
-  display: flex;
-  flex-wrap: wrap;
-
-  .dashboard-item {
-    display: block;
-    border-radius: 2px;
-    border: 1px solid $black-05;
-    padding: 16px;
-    width: 25%;
-    min-width: 200px;
-    margin: 8px 16px 8px 0;
-    text-align: center;
-
-    h3 {
-      font-weight: 400;
-      font-size: 56px;
-      margin: 8px 0 0 0;
-      color: $check-blue;
-    }
-
-    h4 {
-      font-weight: 400;
-      color: $black-16;
-      margin: 8px !important;
-      font-size: 16px;
-      text-transform: uppercase;
-    }
-
-    p {
-      color: $black-32;
-    }
-  }
+#media_verification_statuses_editor_holder,
+#source_verification_statuses_editor_holder,
+#checklist_editor_holder {
+  & > div > h3 > span { display: none }
 }
-
-
