--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,209 +1,2 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,900");
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300");
-.login-email {
-  text-align: left; }
-
-.login-email__modal {
-  position: absolute;
-  top: -10px;
-  left: 0;
-  right: 0;
-  max-width: 500px;
-  margin: 0 auto;
-  transition: top 300ms ease, opacity 400ms ease;
-  pointer-events: none;
-  opacity: 0;
-  background: #fff;
-  padding-bottom: 190px; }
-  .login-email__modal--open {
-    pointer-events: auto;
-    opacity: 1;
-    top: 0; }
-
-.login-email__link {
-  display: inline-block;
-  color: rgba(0, 0, 0, 0.54); }
-
-.login-email__form {
-  padding: 0 50px; }
-
-.login-email__name,
-.login-email__email,
-.login-email__password,
-.login-email__password-confirmation {
-  margin-bottom: 25px;
-  display: flex;
-  flex-direction: column; }
-
-.login-email__name-input,
-.login-email__email-input,
-.login-email__password-input,
-.login-email__password-confirmation-input {
-  order: 2;
-  background: transparent;
-  border: none;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.16);
-  transition: border-color 100ms ease;
-  font-size: 24px;
-  padding: 3px 0 6px;
-  width: 100%; }
-  .login-email__name-input:focus,
-  .login-email__email-input:focus,
-  .login-email__password-input:focus,
-  .login-email__password-confirmation-input:focus {
-    outline: none;
-    border-color: rgba(0, 0, 0, 0.54); }
-
-.login-email__name-label,
-.login-email__email-label,
-.login-email__password-label,
-.login-email__password-confirmation-label {
-  order: 1;
-  display: block;
-  opacity: 0;
-  color: #6c8393;
-  transition: color 200ms ease, opacity 50ms ease;
-  font-size: 14px;
-  font-weight: 500; }
-  .login-email__name-label--text-entered,
-  .login-email__email-label--text-entered,
-  .login-email__password-label--text-entered,
-  .login-email__password-confirmation-label--text-entered {
-    opacity: 1; }
-
-.login-email__actions {
-  padding-top: 10px; }
-
-.login-email__submit {
-  cursor: pointer;
-  border: none;
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Corbel", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, "Verdana Ref", sans-serif;
-  background-color: rgba(0, 0, 0, 0.16);
-  font-size: inherit;
-  display: block;
-  text-decoration: none;
-  text-align: center;
-  line-height: 40px;
-  font-weight: 400;
-  border-radius: 3px;
-  color: #fff;
-  height: 50px;
-  font-size: 20px;
-  padding-left: 44px;
-  padding-right: 44px;
-  margin-bottom: 8px;
-  background-color: #2e77fc;
-  display: block;
-  margin: 0 auto 75px; }
-  .login-email__submit:disabled {
-    cursor: not-allowed; }
-
-.login-menu {
-  text-align: center;
-  position: relative;
-  padding: 45px 0 0 0; }
-  .login-menu p {
-    color: rgba(0, 0, 0, 0.54); }
-  .login-menu a {
-    color: rgba(0, 0, 0, 0.54); }
-
-.login-menu__icon {
-  margin-top: 50px;
-  height: 36px; }
-
-.login-menu__heading {
-  margin: 25px 0 20px 0;
-  font-size: 34px;
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Corbel", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, "Verdana Ref", sans-serif;
-  font-weight: 900;
-  letter-spacing: 0.035em;
-  color: #2e77fc;
-  text-align: center; }
-
-.login-menu__content {
-  position: relative;
-  max-width: 500px;
-  margin: 4em auto; }
-
-.login-menu__options {
-  list-style-type: none;
-  padding: 0;
-  max-width: 245px;
-  margin: 0 auto 60px auto; }
-
-.login-menu__button, .login-email__link {
-  cursor: pointer;
-  border: none;
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Corbel", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, "Verdana Ref", sans-serif;
-  background-color: rgba(0, 0, 0, 0.16);
-  font-size: inherit;
-  display: block;
-  text-decoration: none;
-  text-align: center;
-  line-height: 40px;
-  font-weight: 400;
-  border-radius: 3px;
-  color: #fff;
-  height: 43px;
-  font-size: 17px;
-  margin-bottom: 8px;
-  width: 100%; }
-  .login-menu__button:disabled, .login-email__link:disabled {
-    cursor: not-allowed; }
-
-.login-menu__button, .login-email__link {
-  transition: background-color 400ms ease; }
-  .login-menu__button:hover, .login-email__link:hover {
-    transition: background-color 80ms ease; }
-
-.login-menu__button--twitter {
-  background-color: #0095ff; }
-  .login-menu__button--twitter:hover {
-    background-color: #0077cc; }
-
-.login-menu__button--facebook {
-  background-color: #3b5999; }
-  .login-menu__button--facebook:hover {
-    background-color: #25417c; }
-
-.login-menu__button--google {
-  background-color: #db4437; }
-  .login-menu__button--google:hover {
-    background-color: #c82517; }
-
-.login-menu__button--slack {
-  background-color: #2ab27b; }
-  .login-menu__button--slack:hover {
-    background-color: #189160; }
-
-.login-email__link {
-  cursor: pointer;
-  border: none;
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Corbel", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, "Verdana Ref", sans-serif;
-  background-color: rgba(0, 0, 0, 0.16);
-  font-size: inherit;
-  display: block;
-  text-decoration: none;
-  text-align: center;
-  line-height: 40px;
-  font-weight: 400;
-  border-radius: 3px;
-  color: #fff;
-  height: 43px;
-  font-size: 17px;
-  margin-bottom: 8px;
-  color: white !important;
-  background-color: rgba(0, 0, 0, 0.54);
-  text-align: center;
-  text-decoration: none; }
-  .login-email__link:disabled {
-    cursor: not-allowed; }
-  .login-email__link:hover {
-    background-color: rgba(0, 0, 0, 0.87); }
-
-p.other-method {
-  border-top: 1px solid rgba(0, 0, 0, 0.16);
-  padding: 32px 16px 16px; }
-
-.browser-support a {
-  color: #0a0d0f; }
+.login-email{text-align:left}.login-email__modal{position:absolute;top:-10px;left:0;right:0;max-width:500px;margin:0 auto;transition:top 300ms ease, opacity 400ms ease;pointer-events:none;opacity:0;background:#fff;padding-bottom:190px}.login-email__modal--open{pointer-events:auto;opacity:1;top:0}.login-email__link{display:inline-block;padding:9px;color:#7890a1}.login-email__form{padding:0 50px}.login-email__name,.login-email__email,.login-email__password,.login-email__password-confirmation{margin-bottom:25px;display:flex;flex-direction:column}.login-email__name-input,.login-email__email-input,.login-email__password-input,.login-email__password-confirmation-input{order:2;background:transparent;border:none;border-bottom:2px solid rgba(105,131,150,0.2);transition:border-color 100ms ease;font-size:24px;padding:3px 0 6px;width:100%}.login-email__name-input:focus,.login-email__email-input:focus,.login-email__password-input:focus,.login-email__password-confirmation-input:focus{outline:none;border-color:theme-blue(62%)}.login-email__name-label,.login-email__email-label,.login-email__password-label,.login-email__password-confirmation-label{order:1;display:block;opacity:0;color:#6c8393;transition:color 200ms ease, opacity 50ms ease;font-size:14px;font-weight:500}.login-email__name-label--text-entered,.login-email__email-label--text-entered,.login-email__password-label--text-entered,.login-email__password-confirmation-label--text-entered{opacity:1}.login-email__actions{padding-top:10px}.login-email__submit{cursor:pointer;border:none;font-family:"Roboto",-apple-system,BlinkMacSystemFont,"Corbel","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,"Verdana Ref",sans-serif;background-color:#cfcfcf;font-size:inherit;display:block;text-decoration:none;text-align:center;line-height:40px;border-radius:3px;color:#fff;height:50px;font-size:20px;padding-left:44px;padding-right:44px;margin-bottom:8px;background-color:#47cf98;display:block;margin:0 auto 75px}.login-email__submit:disabled{cursor:not-allowed}.login-email__register-or-login,.login-email__cancel,.login-email__help-text{color:#7890a1;text-align:center;margin:0 0 17px;width:100%;font-size:16px}.login-email__register-or-login,.login-email__cancel{cursor:pointer;border:none;font-family:"Roboto",-apple-system,BlinkMacSystemFont,"Corbel","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,"Verdana Ref",sans-serif;background-color:#cfcfcf;font-size:inherit;display:block;text-decoration:none;text-align:center;line-height:40px;background-color:transparent;padding:0}.login-email__register-or-login:focus,.login-email__cancel:focus{outline:none}.login-email__register-or-login{font-weight:600}.upload-file>div{width:100% !important;height:auto !important;padding:25px 2px !important;border:1px dashed #ccc !important;color:#ccc !important;text-align:center;float:right}.upload-file>div.with-file{width:80% !important}.upload-file{width:100%;margin:10px 0}.upload-file br{clear:both}.preview{position:relative;display:inline-block;float:left;background-position:center center;background-repeat:no-repeat;background-size:contain;height:71px;padding:0;margin:0;border:1px solid #ccc;width:19%;margin-right:1%}.preview .remove-image{position:absolute;top:-2px;right:1px;z-index:1;color:#ccc;cursor:pointer}.login-menu{text-align:center;position:relative;padding:45px 0 0 0}.login-menu p{color:#6F7A82}.login-menu a{color:#6F7A82}.login-menu__icon{margin-top:50px;height:36px}.login-menu__heading{margin:25px 0 20px 0;font-size:34px;font-family:"Roboto Condensed","Roboto",-apple-system,BlinkMacSystemFont,"Corbel","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,"Verdana Ref",sans-serif;font-weight:700;text-transform:uppercase;letter-spacing:0.035em;color:#3fabfd;text-align:center}.login-menu__content{position:relative;max-width:500px;margin:4em auto}.login-menu__blurb{font-size:17px;color:#0a0d0f;font-family:"Merriweather",Georgia,serif;margin-bottom:30px;line-height:1.45;margin-bottom:15px}.login-menu__options{list-style-type:none;padding:0;max-width:245px;margin:0 auto 60px auto}.login-menu__button,.login-email__link{cursor:pointer;border:none;font-family:"Roboto",-apple-system,BlinkMacSystemFont,"Corbel","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,"Verdana Ref",sans-serif;background-color:#cfcfcf;font-size:inherit;display:block;text-decoration:none;text-align:center;line-height:40px;border-radius:3px;color:#fff;height:43px;font-size:17px;margin-bottom:8px;width:100%}.login-menu__button:disabled,.login-email__link:disabled{cursor:not-allowed}.login-menu__button,.login-email__link{transition:background-color 400ms ease}.login-menu__button:hover,.login-email__link:hover{transition:background-color 80ms ease}.login-menu__button--twitter{background-color:#0095FF}.login-menu__button--twitter:hover{background-color:#07c}.login-menu__button--facebook{background-color:#3B5999}.login-menu__button--facebook:hover{background-color:#25417c}.login-menu__button--google{background-color:#DB4437}.login-menu__button--google:hover{background-color:#c82517}.login-menu__button--slack{background-color:#2AB27B}.login-menu__button--slack:hover{background-color:#189160}.login-email__link{cursor:pointer;border:none;font-family:"Roboto",-apple-system,BlinkMacSystemFont,"Corbel","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,"Verdana Ref",sans-serif;background-color:#cfcfcf;font-size:inherit;display:block;text-decoration:none;text-align:center;line-height:40px;border-radius:3px;color:#fff;height:43px;font-size:17px;margin-bottom:8px;color:#fff !important;background-color:#9FA6AC;text-align:center;text-decoration:none}.login-email__link:disabled{cursor:not-allowed}.login-email__link:hover{background-color:#404D59}p.other-method{border-top:1px solid #CFD3D5;padding:32px 16px 16px}.browser-support a{color:#0a0d0f}
+/*# sourceMappingURL=home.css.map */
