--- a/app/assets/sass/_buttons.scss
+++ b/app/assets/sass/_buttons.scss
@@ -2,30 +2,25 @@
   cursor: pointer;
   border: none;
   font-family: $font-stack-sans;
-  background-color: $black-16;
+  background-color: $gray-350;
   font-size: inherit;
   display: block;
   text-decoration: none;
   text-align: center;
   line-height: 40px;
-  font-weight: 400;
 }
 
 @mixin unbutton { // elements that should semantically be <button> but not look like buttons
   @include button-defaults;
   background-color: transparent;
   padding: 0;
-
-  &:focus {
-    outline: none;
-  }
+  &:focus { outline: none; }
 }
 
 @mixin button-standard {
   @include button-defaults;
   border-radius: 3px;
   color: #fff;
-
   &:disabled {
     cursor: not-allowed;
   }
@@ -69,4 +64,39 @@
   padding-left: 44px;
   padding-right: 44px;
   margin-bottom: 8px;
+}
+
+@mixin button-green {
+  background-color: rgb(71, 207, 152);
+}
+
+@mixin close-button($size: 30px) {
+  @include unbutton;
+  color: $light-gray-text;
+  font-weight: 200;
+  font-size: $size;
+  &, &:hover {
+    text-decoration: none;
+  }
+}
+
+@mixin chicklet {
+  border-radius: 3px;
+  background-color: $firefly-60-1;
+  color: $regent-grey;
+  display: inline-block;
+  font-size: 14px;
+  // font-weight: 200;
+  padding: 2px 11px !important;
+  margin: 0 4px 4px 0;
+  transition: background-color 0.2s ease, color 0.2s ease;
+  &--selected {
+    background-color: $firefly-60;
+    color: $firefly-5;
+  }
+  &--active {
+  }
+  &--hover {
+    cursor: pointer;
+  }
 }
