--- a/app/views/rails_admin/main/_form_settings_field.html.haml
+++ b/app/views/rails_admin/main/_form_settings_field.html.haml
@@ -1,5 +1,5 @@
 = render :partial => 'form_field', :locals => { :form => form, :field => field }
 
-.settings-example
+.col-sm-6.controls.settings-example
   %span Example
   = render :partial => field.method_name.to_s
