--- a/app/views/rails_admin/main/_form_settings_text.html.haml
+++ b/app/views/rails_admin/main/_form_settings_text.html.haml
@@ -1,5 +1,6 @@
 = render :partial => 'form_text', :locals => { :form => form, :field => field }
 
-.controls.settings-example
+.col-sm-7.controls.settings-example
   %span Example
+  %i{:class => "icon-resize-full"}
   = render :partial => field.method_name.to_s
